--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "boxicons": "^2.1.4",
+    "framer-motion": "^9.0.2",
     "postcss": "^8.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
